# thingsboard-client-sdk

./: .cli-config.yml  .gitignore  .gitmodules  .piopm  .travis.yml  API__Process__Type_8h.html  API__Process__Type_8h__dep__incl.map  API__Process__Type_8h__dep__incl.md5  API__Process__Type_8h__incl.map  API__Process__Type_8h__incl.md5  API__Process__Type_8h_source.html  Arduino__ESP32__Updater_8cpp.html  Arduino__ESP32__Updater_8cpp__incl.map  Arduino__ESP32__Updater_8cpp__incl.md5  Arduino__ESP32__Updater_8h.html  Arduino__ESP32__Updater_8h__dep__incl.map  Arduino__ESP32__Updater_8h__dep__incl.md5  Arduino__ESP32__Updater_8h__incl.map  Arduino__ESP32__Updater_8h__incl.md5  Arduino__ESP32__Updater_8h_source.html  Arduino__ESP8266__Updater_8cpp.html  Arduino__ESP8266__Updater_8cpp__incl.map  Arduino__ESP8266__Updater_8cpp__incl.md5  Arduino__ESP8266__Updater_8h.html  Arduino__ESP8266__Updater_8h__dep__incl.map  Arduino__ESP8266__Updater_8h__dep__incl.md5  Arduino__ESP8266__Updater_8h__incl.map  Arduino__ESP8266__Updater_8h__incl.md5  Arduino__ESP8266__Updater_8h_source.html  Arduino__HTTP__Client_8cpp.html  Arduino__HTTP__Client_8cpp__incl.map  Arduino__HTTP__Client_8cpp__incl.md5  Arduino__HTTP__Client_8h.html  Arduino__HTTP__Client_8h__dep__incl.map  Arduino__HTTP__Client_8h__dep__incl.md5  Arduino__HTTP__Client_8h_source.html  Arduino__MQTT__Client_8cpp.html  Arduino__MQTT__Client_8cpp__incl.map  Arduino__MQTT__Client_8cpp__incl.md5  Arduino__MQTT__Client_8h.html  (+484 more)
.github/workflows/: arduino-compile.yaml  arduino-compile.yml  esp32-compile.yml  esp8266-compile.yml  espidf-compile-v4.4.yml  espidf-compile-v5.1.yml  espidf-compile.yml  espressif_upload.yml  generate_documentation.yml  report-size.yml
docs/: Doxyfile
examples/: README.md
examples/0000-arduino_send_telemetry/: 0000-arduino_send_telemetry.ino  README.md
examples/0001-arduino_send_batch/: 0001-arduino_send_batch.ino  README.md
examples/0014-espressif_esp32_send_data/: 0014-espressif_esp32_send_data.ino  CMakeLists.txt  README.md
examples/0014-espressif_esp32_send_data/main/: 0014-espressif_esp32_send_data.cpp  CMakeLists.txt  idf_component.yml
examples/0015-espressif_esp32_process_OTA_MQTT/: 0015-espressif_esp32_process_OTA_MQTT.ino  CMakeLists.txt  README.md
examples/0015-espressif_esp32_process_OTA_MQTT/main/: 0015-espressif_esp32_process_OTA_MQTT.cpp  CMakeLists.txt  idf_component.yml
examples/0016-espressif_esp32_rpc/main/: 0016-espressif_esp32_rpc.cpp  CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  (+59 more)
src/: API_Implementation.h  API_Process_Type.h  Arduino_ESP32_Updater.cpp  Arduino_ESP32_Updater.h  Arduino_ESP8266_Updater.cpp  Arduino_ESP8266_Updater.h  Arduino_HTTP_Client.cpp  Arduino_HTTP_Client.h  Arduino_MQTT_Client.cpp  Arduino_MQTT_Client.h  ArgumentCache.h  Argument_Cache.h  Array.h  Attribute_Request.h  Attribute_Request_Callback.cpp  Attribute_Request_Callback.h  Callback.h  Callback_Watchdog.cpp  Callback_Watchdog.h  Client_Side_RPC.h  Configuration.h  Constants.h  Container.h  DefaultLogger.cpp  DefaultLogger.h  ESP32_Updater.cpp  ESP32_Updater.h  ESP6266_Updater.cpp  ESP8266_Updater.cpp  ESP8266_Updater.h  Espressif_MQTT_Client.cpp  Espressif_MQTT_Client.h  Espressif_Updater.cpp  Espressif_Updater.h  Gateway_RPC_Callback.cpp  Gateway_RPC_Callback.h  HashGenerator.cpp  HashGenerator.h  Helper.cpp  Helper.h  (+39 more)
(+56 files in other folders)
